--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
- color: burlywood;
+ color: blanchedalmond;
 }
 body{
-    background-color: rgb(52, 58, 63);
+    background-color: rgb(56, 48, 56);
 }
